cabal-version:   3.0
name:            piob
version:         0.1.0.0
synopsis:        Textual format for bagpipe music.
license:         BSD-2-Clause
license-file:    LICENSE
author:          Jonathan Merritt
maintainer:      j.s.merritt@gmail.com
copyright:       Copyright (C) Jonathan Merritt, 2023
category:        Language
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib
  build-depends:    base ^>=4.17.2.0
  hs-source-dirs:   src
  default-language: GHC2021

executable piob
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base  ^>=4.17.2.0
    , piob

  hs-source-dirs:   app
  default-language: GHC2021

test-suite piob-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base  ^>=4.17.2.0
    , piob
